--- a/Saturn Engine.vcxproj
+++ b/Saturn Engine.vcxproj
@@ -141,12 +141,15 @@
   <ItemGroup>
     <ClCompile Include="src\D3dClass.cpp" />
     <ClCompile Include="src\CameraClass.cpp" />
+    <ClCompile Include="src\FontClass.cpp" />
+    <ClCompile Include="src\FontShaderClass.cpp" />
     <ClCompile Include="src\LightClass.cpp" />
     <ClCompile Include="src\LightShaderClass.cpp" />
     <ClCompile Include="src\ModelClass.cpp" />
     <ClCompile Include="src\ColorsShaderClass.cpp" />
     <ClCompile Include="src\ApplicationClass.cpp" />
     <ClCompile Include="src\InputClass.cpp" />
+    <ClCompile Include="src\TextClass.cpp" />
     <ClCompile Include="src\TextureClass.cpp" />
     <ClCompile Include="src\WinMain.cpp" />
     <ClCompile Include="src\SystemClass.cpp" />
@@ -155,6 +158,8 @@
   <ItemGroup>
     <ClInclude Include="src\header\D3dClass.h" />
     <ClInclude Include="src\header\CameraClass.h" />
+    <ClInclude Include="src\header\FontClass.h" />
+    <ClInclude Include="src\header\FontShaderClass.h" />
     <ClInclude Include="src\header\LightClass.h" />
     <ClInclude Include="src\header\LightShaderClass.h" />
     <ClInclude Include="src\header\ModelClass.h" />
@@ -162,6 +167,7 @@
     <ClInclude Include="src\header\ApplicationClass.h" />
     <ClInclude Include="src\header\InputClass.h" />
     <ClInclude Include="src\header\SystemClass.h" />
+    <ClInclude Include="src\header\TextClass.h" />
     <ClInclude Include="src\header\TextureClass.h" />
     <ClInclude Include="src\header\TextureShaderClass.h" />
   </ItemGroup>
@@ -212,6 +218,24 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="src\HLSL\lightPixelShader.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
+      <FileType>Document</FileType>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="src\HLSL\fontVertexShader.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
+      <FileType>Document</FileType>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="src\HLSL\fontPixelShader.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
