--- a/Saturn Engine.vcxproj
+++ b/Saturn Engine.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="src\CameraClass.cpp" />
     <ClCompile Include="src\FontClass.cpp" />
     <ClCompile Include="src\FontShaderClass.cpp" />
+    <ClCompile Include="src\FpsClass.cpp" />
     <ClCompile Include="src\LightClass.cpp" />
     <ClCompile Include="src\LightShaderClass.cpp" />
     <ClCompile Include="src\ModelClass.cpp" />
@@ -160,6 +161,7 @@
     <ClInclude Include="src\header\CameraClass.h" />
     <ClInclude Include="src\header\FontClass.h" />
     <ClInclude Include="src\header\FontShaderClass.h" />
+    <ClInclude Include="src\header\FpsClass.h" />
     <ClInclude Include="src\header\LightClass.h" />
     <ClInclude Include="src\header\LightShaderClass.h" />
     <ClInclude Include="src\header\ModelClass.h" />
