--- a/imgui.ini
+++ b/imgui.ini
@@ -19,6 +19,10 @@ Pos=15,51
 Size=341,68
 
 [Window][3d Object]
-Pos=243,456
-Size=345,117
+Pos=462,268
+Size=261,143
+
+[Window][Scene]
+Pos=607,525
+Size=351,223
 
