--- a/Saturn Engine.vcxproj.filters
+++ b/Saturn Engine.vcxproj.filters
@@ -104,6 +104,9 @@
     <ClCompile Include="src\TimerClass.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\NormalMapShaderClass.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\header\SystemClass.h">
@@ -187,6 +190,12 @@
     <ClInclude Include="src\header\TimerClass.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\header\ECS.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\header\NormalMapShaderClass.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\HLSL\colorVertexShader.hlsl" />
@@ -197,5 +206,7 @@
     <None Include="src\HLSL\lightPixelShader.hlsl" />
     <None Include="src\HLSL\fontVertexShader.hlsl" />
     <None Include="src\HLSL\fontPixelShader.hlsl" />
+    <None Include="src\HLSL\normalMapPixelShader.hlsl" />
+    <None Include="src\HLSL\normalMapVertexShader.hlsl" />
   </ItemGroup>
 </Project>
